--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,6 @@
 @import url('https://cdn.syncfusion.com/ej2/material.css');
 
-.sidebar {
+.Sidebar {
   box-shadow: rgb(113 122 131 / 11%) 0px 7px 30px 0px;
 }
 .nav-item,
@@ -8,7 +8,7 @@
   z-index: 10000;
 }
 @media  screen and (max-width:800px) {
-  .sidebar{
+  .Sidebar{
     z-index: 10000000;
   }
 }
